--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:11
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} user-service.jar
-ENTRYPOINT ["java","-jar","/user-service.jar"]
+ENTRYPOINT ["java","-jar","beepeen1010/user-service.jar"]
 EXPOSE 9002
