--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dailycodebuffer</groupId>
+	<groupId>com.beepeen1010</groupId>
 	<artifactId>user-service</artifactId>
 	<version>0.0.1</version>
 	<name>user-service</name>
